--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-purple-600">
+<html lang="en" class="bg-darkblue-300">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
